--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Vcs-Browser: http://github.com/tseliot/nvidia-prime
 
 Package: nvidia-prime
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: lightdm, pciutils, ${shlibs:Depends}, ${misc:Depends}
 Description: Tools to enable NVIDIA's Prime
  This is a set of tools which will enable
  NVIDIA's Prime on MUXless systems.
