debian/rules: replace PKG_driver with PKG_name

--- a/debian/rules
+++ b/debian/rules
@@ -14,7 +14,7 @@ TMP     = $(CURDIR)/debian/tmp
 PKG_lightdm_config_dir := /etc/lightdm
 PKG_lightdm_config_file := $(PKG_lightdm_config_dir)/lightdm.conf
 LIGHTDM_CONF_DIR := $(TMP)$(PKG_lightdm_config_dir)
-PKG_lightdm_custom_config_dir := /usr/share/$(PKG_driver)
+PKG_lightdm_custom_config_dir := /usr/share/$(PKG_name)
 PKG_lightdm_custom_config_file := $(PKG_lightdm_custom_config_dir)/lightdm.conf
 LIGHTDM_CUSTOM_CONF_DIR := $(TMP)$(PKG_lightdm_custom_config_dir)
 XORG_CONF := /etc/X11/xorg.conf
