Make sure the original lightdm.conf is preserved

--- a/debian/postrm.in
+++ b/debian/postrm.in
@@ -29,11 +29,11 @@ case "$1" in
         fi
 
         # Restore the default lightdm.conf, if any
-        if dpkg-divert --list /etc/lightdm/lightdm.conf | \
+        if dpkg-divert --list #LIGHTDM_CONF_FILE# | \
            grep 'nvidia-prime' > /dev/null ; then
-            rm -f /etc/lightdm/lightdm.conf
+            rm -f #LIGHTDM_CONF_FILE#
             dpkg-divert --remove --rename --package nvidia-prime \
-                        /etc/lightdm/lightdm.conf > /dev/null
+                        #LIGHTDM_CONF_FILE# > /dev/null
         fi
     ;;
 
