--- a/debian/postinst.in
+++ b/debian/postinst.in
@@ -3,7 +3,7 @@
 #
 # see: dh_installdeb(1)
 
-set -e
+set -ex
 
 # summary of how this script can be called:
 #        * <postinst> `configure' <most-recently-configured-version>
