--- a/debian/postinst.in
+++ b/debian/postinst.in
@@ -19,7 +19,16 @@ set -e
 
 xorg_conf="#XORG_CONF#"
 
-nvidia_id="$(lspci -n | grep 300 | grep de | cut -d" " -f1 | sed s/\\./:/g)"
+nvidia_id=""
+pattern="10de"
+for devclass in "300" "301" "302" "380"; do
+    nvidia_id="$(lspci -n | grep $devclass | grep $pattern | cut -d" " -f1 | sed s/\\./:/g)"
+    if [ -n "$nvidia_id" ]; then
+        # We have found the device
+        break
+    fi
+done
+
 id_0="$(echo $nvidia_id | cut -d: -f1)"
 id_1="$(echo $nvidia_id | cut -d: -f2)"
 id_2="$(echo $nvidia_id | cut -d: -f3)"
