--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,8 @@ Vcs-Browser: http://github.com/tseliot/nvidia-prime
 
 Package: nvidia-prime
 Architecture: all
-Depends: lightdm, pciutils, ${shlibs:Depends}, ${misc:Depends}
+Depends: lightdm, bbswitch-dkms, pciutils,
+ ${shlibs:Depends}, ${misc:Depends}
 Conflicts: hybrid-graphics
 Replaces: hybrid-graphics
 Provides: hybrid-graphics
