Rename config file as /etc/prime-discrete

--- a/debian/preinst.in
+++ b/debian/preinst.in
@@ -72,8 +72,8 @@ case "$1" in
         # Insert the display-setup-script line
         add_hybrid_script
 
-        if [ ! -f /etc/lightdm/hybrid_default ]; then
-            echo "on" > /etc/lightdm/hybrid_default
+        if [ ! -f /etc/prime-discrete ]; then
+            echo "on" > /etc/prime-discrete
         fi
     ;;
 
