--- a/debian/preinst.in
+++ b/debian/preinst.in
@@ -46,13 +46,13 @@ display-setup-script\=\/sbin\/prime-offload' \
              grep "display-stopped-script"; then
             echo "$lightdm_orig" | \
             sed "s/.*display-stopped-script.*/\
-display-stopped-script\=\/sbin\/hybrid-switch/g" \
+display-stopped-script\=\/sbin\/prime-switch/g" \
             > "$lightdm_orig_conf"
         else
             # Add a line after the pattern
             echo "$lightdm_orig" | \
             sed '/.*display-setup-script.*/ a\
-display-stopped-script\=\/sbin\/hybrid-switch' \
+display-stopped-script\=\/sbin\/prime-switch' \
             > "$lightdm_orig_conf"
         fi
     else
@@ -63,7 +63,7 @@ display-stopped-script\=\/sbin\/hybrid-switch' \
 greeter-session=unity-greeter
 user-session=ubuntu
 display-setup-script=/sbin/prime-offload
-display-stopped-script=/sbin/hybrid-switch
+display-stopped-script=/sbin/prime-switch
 EOF
     fi
 }
