--- a/debian/install.in
+++ b/debian/install.in
@@ -1,5 +1,6 @@
 #LIGHTDM_CONF_FILENAME_D# #LIGHTDM_CONF_DIR_D#
 xorg.template #LIGHTDM_CUSTOM_CONF_DIR#
+xorg_legacy.template #LIGHTDM_CUSTOM_CONF_DIR#
 prime-offload /sbin
 prime-switch /sbin
 prime-xconfig /sbin
