--- a/debian/postrm.in
+++ b/debian/postrm.in
@@ -23,7 +23,7 @@ now=$(date +"%m%d%Y")
 lightdm_orig_conf=#LIGHTDM_CONF_FILE#
 
 remove_hybrid_script () {
-    if [ -f "$lightdm_orig_conf" -a ! -z "$(cat $lightdm_orig_conf)" ]; then
+    if [ -s "$lightdm_orig_conf" ]; then
         # Get the file
         lightdm_orig="$(cat $lightdm_orig_conf)"
         echo "$lightdm_orig" | \
