xorg.template: disable "AllowEmptyInitialConfiguration"
Use Option "UseDisplayDevice" "none" for now, at least until the
weird input grabbing issue is fixed.

--- a/xorg.template
+++ b/xorg.template
@@ -18,7 +18,8 @@ Section "Screen"
     # The internal display might not be connected
     # to the nvidia card but we definitely want
     # to be able to connect external displays later
-    Option "AllowEmptyInitialConfiguration" "on"
+    #Option "AllowEmptyInitialConfiguration" "on"
+    Option "UseDisplayDevice" "none"
 EndSection
 
 Section "Device"
