--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Vcs-Browser: http://github.com/tseliot/nvidia-prime
 
 Package: nvidia-prime
 Architecture: i386 amd64
-Depends: lightdm, bbswitch-dkms, pciutils,
+Depends: lightdm (>= 1.9.1), bbswitch-dkms, pciutils,
  ${shlibs:Depends}, ${misc:Depends}
 Conflicts: hybrid-graphics
 Replaces: hybrid-graphics
