--- a/debian/control
+++ b/debian/control
@@ -9,8 +9,8 @@ Vcs-Browser: http://github.com/tseliot/nvidia-prime
 
 Package: nvidia-prime
 Architecture: i386 amd64
-Depends: lightdm (>= 1.9.1), bbswitch-dkms, pciutils,
- ${shlibs:Depends}, ${misc:Depends}
+Depends: lightdm (>= 1.9.1), upstart, bbswitch-dkms,
+ pciutils, ${shlibs:Depends}, ${misc:Depends}
 Conflicts: hybrid-graphics
 Replaces: hybrid-graphics
 Provides: hybrid-graphics
