--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Vcs-Browser: http://github.com/tseliot/nvidia-prime
 Package: nvidia-prime
 Architecture: i386 amd64
 Depends: lightdm (>= 1.9.1), upstart, bbswitch-dkms,
- pciutils, ${shlibs:Depends}, ${misc:Depends}
+ pciutils, lsb-release, ${shlibs:Depends}, ${misc:Depends}
 Conflicts: hybrid-graphics
 Replaces: hybrid-graphics
 Provides: hybrid-graphics
