--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Vcs-Browser: http://github.com/tseliot/nvidia-prime
 
 Package: nvidia-prime
 Architecture: i386 amd64
-Depends: lightdm (>= 1.2.3-0ubuntu2.4), upstart,
+Depends: lightdm (>= 1.2.3-0ubuntu2.4) | gdm | kdm, upstart,
  bbswitch-dkms, pciutils, lsb-release, ${shlibs:Depends},
  ${misc:Depends}
 Conflicts: hybrid-graphics
