debian/postrm.in, debian/rules: avoid calling dpkg-architecture
Fixes LP: #1264611

--- a/debian/postrm.in
+++ b/debian/postrm.in
@@ -21,6 +21,8 @@ set -e
 xorg_conf="#XORG_CONF#"
 now=$(date +"%m%d%Y")
 lightdm_orig_conf=#LIGHTDM_CONF_FILE#
+host_arch_main=#HOST_ARCH_MAIN#
+host_arch_other=#HOST_ARCH_OTHER#
 
 remove_hybrid_script () {
     if [ -s "$lightdm_orig_conf" ]; then
@@ -72,13 +74,6 @@ case "$1" in
             # Restore the alternatives to a non prime
             # configuration, if possible
             os_release="$(lsb_release -c | cut -d: -f2 | sed "s/\t//g")"
-            host_arch_main=$(dpkg-architecture -qDEB_HOST_MULTIARCH)
-            host_arch_other=$( (echo "$host_arch_main" | \
-                                grep "i386" >/dev/null) && \
-                                echo "$host_arch_main" | \
-                                sed "s/i386/x86_64/" || \
-                                echo "$host_arch_main" | \
-                                sed "s/x86_64/i386/")
             main_arch=""$host_arch_main"_gl_conf"
             other_arch=""$host_arch_other"_gl_conf"
             main_alternative="$(get_current_alternative "$main_arch")"
