--- a/xorg.template
+++ b/xorg.template
@@ -24,10 +24,5 @@ EndSection
 
 Section "Device"
     Identifier "intel"
-    Driver "modesetting"
-EndSection
-
-Section "Screen"
-    Identifier "intel"
-    Device "intel"
+    Driver "intel"
 EndSection
