--- a/xorg_legacy.template
+++ b/xorg_legacy.template
@@ -23,10 +23,5 @@ EndSection
 
 Section "Device"
     Identifier "intel"
-    Driver "modesetting"
-EndSection
-
-Section "Screen"
-    Identifier "intel"
-    Device "intel"
+    Driver "intel"
 EndSection
